--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ run_my_job.slurm
 **/*.0001_WD_1e-05_ED_3_DC_256_128_64_LOSS_L1..png
 **/*.0001_WD_1e-06_ED_3_DC_256_128_64_LOSS_L1..png
 **/*.0001_WD_1e-06_ED_3_DC_256_128_64_LOSS_MSE..png
+training_run_results/
+*.png
