--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@ dem.dehm_be
 datasets/Data/manifest.csv
 .gitignore
 Kyoto-Osaka.dehm
+training_run_results_top.zip
+.gitignore
+datasets/TopographicData.zip
+.gitignore
+datasets/TopographicData/manifest.csv
