Tested visualizations on larger dataset training

--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,16 @@
-dataset/
+*.csv
+*.zip
+*.err
 *.pth
-**/*.pt
-**/*.pt
-**/*.pt
-Data/manifest.csv
-**/*.001_WD_1e-05_ED_3_DC_256_128_64_LOSS_MSE..png
-**/*.001_WD_1e-05_ED_3_DC_256_128_64_LOSS_MSE..png
-**/*.001_WD_1e-05_ED_3_DC_256_128_64_LOSS_MSE-checkpoint..png
-my_job_errors_4757766.err
-my_job_errors_4776770.err
-my_job_errors_4776771.err
-my_job_errors_4776989.err
-my_job_output_4757766.log
-my_job_output_4776770.log
-my_job_output_4776771.log
-my_job_output_4776989.log
-run_my_job.slurm
-**/*.001_WD_1e-05_ED_3_DC_256_128_64_LOSS_MSE-checkpoint..png
-**/*.0001_WD_1e-05_ED_3_DC_256_128_64_LOSS_L1..png
-**/*.0001_WD_1e-06_ED_3_DC_256_128_64_LOSS_L1..png
-**/*.0001_WD_1e-06_ED_3_DC_256_128_64_LOSS_MSE..png
-training_run_results/
 *.png
+*.log
+
 Kyoto-Osaka_gsi.dehm_be
-training_run_results_combined_loss.zip
 baselines.txt
 dem.dehm_be
-datasets/Data/manifest.csv
-.gitignore
 Kyoto-Osaka.dehm
-training_run_results_top.zip
-.gitignore
-datasets/TopographicData.zip
-.gitignore
-datasets/TopographicData/manifest.csv
-datasets/TopographicData2.zip
-datasets/TopographicData2/manifest.csv
+run_my_job.slurm
+
+datasets/
+training_run_results/
+data_splits2/
